--- a/helloCompositeExporter/pom.xml
+++ b/helloCompositeExporter/pom.xml
@@ -1,6 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<parent>
+    <groupId>wso2.sampleHelloWorld</groupId>
+    <artifactId>hello</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+</parent><?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <parent>
+		<groupId>wso2.sampleHelloWorld</groupId>
+    <artifactId>hello</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>wso2.sampleHelloWorld</groupId>
   <artifactId>helloCompositeExporter</artifactId>
@@ -12,6 +23,7 @@
     <wso2.sampleHelloWorld.api_._HelloWorld>capp/EnterpriseServiceBus</wso2.sampleHelloWorld.api_._HelloWorld>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,datasource/datasource=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
+  
   <dependencies>
     <dependency>
       <groupId>wso2.sampleHelloWorld.api</groupId>
