--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
         <repository>
             <id>nexus-releases</id>
             <name>WSO2 Release Distribution Repository</name>
-            <url>http://localhost:8081/nexus/releases</url>
+            <url>http://localhost:8081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <id>wso2.snapshots</id>
             <name>Apache Snapshot Repository</name>
-            <url>http://localhost:8081/nexus/releases</url>
+            <url>http://localhost:8081/nexus/content/repositories/releases/</url>
         </snapshotRepository>
     </distributionManagement>
   <scm>
