--- a/helloCompositeExporter/pom.xml
+++ b/helloCompositeExporter/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>wso2.sampleHelloWorld.api</groupId>
       <artifactId>HelloWorld</artifactId>
-      <version>${project.version}</version>
+      <version>1.0.47</version>
       <type>xml</type>
     </dependency>
   </dependencies>
