--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>wso2.sampleHelloWorld</groupId>
   <artifactId>hello</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.101</version>
   <packaging>pom</packaging>
   <name>hello</name>
   <description>hello</description>
@@ -24,7 +23,7 @@
         <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
         <developerConnection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</developerConnection>
         <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
-        <tag>HEAD</tag>
+        <tag>v1.0.101</tag>
     </scm>
   <modules>
     <module>helloConfigs</module>
