--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
             <name>WSO2 Release Distribution Repository</name>
             <url>http://localhost:8081/nexus/content/repositories/releases/</url>
         </repository>
-        <!-- <snapshotRepository>
-            <id>wso2.snapshots</id>
+        <snapshotRepository>
+            <id>snapshots</id>
             <name>Apache Snapshot Repository</name>
-            <url>http://localhost:8081/nexus/content/repositories/releases/</url>
-        </snapshotRepository> -->
+            <url>http://localhost:8081/nexus/content/repositories/thirdparty</url>
+        </snapshotRepository>
     </distributionManagement>
   <scm>
         <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
