--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,21 @@
   <packaging>pom</packaging>
   <name>hello</name>
   <description>hello</description>
-  <distributionManagement>
+  <repositories>
         <repository>
             <id>releases</id>
+            <name>WSO2 internal Repository</name>
+            <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+        </repository>
+    </repositories>
+  <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
             <name>WSO2 Release Distribution Repository</name>
             <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2</url>
         </repository>
@@ -19,7 +31,7 @@
             <url>http://localhost:8081/nexus/content/repositories/thirdparty/</url>
         </snapshotRepository>
     </distributionManagement>
-  <scm>
+    <scm>
         <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
         <developerConnection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</developerConnection>
         <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
