--- a/helloCompositeExporter/pom.xml
+++ b/helloCompositeExporter/pom.xml
@@ -3,7 +3,7 @@
   <parent>
 		<groupId>wso2.sampleHelloWorld</groupId>
     <artifactId>hello</artifactId>
-    <version>1.0.236-SNAPSHOT</version>
+    <version>1.0.237</version>
 		<relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
