--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
+                  <tagNameFormat>@{project.version}</tagNameFormat>
                     <preparationGoals>clean install</preparationGoals>
                 </configuration>
             </plugin>
