--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
                     <preparationGoals>clean install</preparationGoals>
                 </configuration>
             </plugin>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
-            </plugin>
+            </plugin> -->
         </plugins>
       </build>
     </profile>
