--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,14 @@
               </projectnatures>
             </configuration>
           </plugin>
-          <plugin>
+          <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <tagNameFormat>@{project.version}</tagNameFormat>
                     <preparationGoals>clean install</preparationGoals>
                 </configuration>
-            </plugin>
+            </plugin> -->
             <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
