--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,21 @@
                     <preparationGoals>clean install</preparationGoals>
                 </configuration>
             </plugin> -->
-            <!-- <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
-            </plugin> -->
+                <configuration>
+                  <skipAttachedArtifacts>
+                    <artifact>
+                      <groupId>wso2.sampleHelloWorld</groupId>
+                      <artifactId>helloConfigs</artifactId>
+                      <version>${project.version}</version>
+                      <packaging>pom</packaging>
+                    </artifact>
+                  </skipAttachedArtifacts>
+                </configuration>
+            </plugin>
         </plugins>
       </build>
     </profile>
