--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>wso2.sampleHelloWorld</groupId>
   <artifactId>hello</artifactId>
@@ -7,23 +8,22 @@
   <packaging>pom</packaging>
   <name>hello</name>
   <description>hello</description>
-  <distributionManagement>
-        <repository>
-            <id>releases</id>
-            <name>WSO2 Release Distribution Repository</name>
-            <url>http://localhost:8081/nexus/content/repositories/releases/</url>
-        </repository>
-    </distributionManagement>
-    <scm>
-        <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
-        <developerConnection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</developerConnection>
-        <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
-        <tag>HEAD</tag>
-    </scm>
   <modules>
     <module>helloConfigs</module>
     <module>helloCompositeExporter</module>
   </modules>
+  <scm>
+    <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
+    <developerConnection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</developerConnection>
+    <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
+  </scm>
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>WSO2 Release Distribution Repository</name>
+      <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+    </repository>
+  </distributionManagement>
   <build />
   <profiles>
     <profile>
@@ -40,29 +40,20 @@
               </projectnatures>
             </configuration>
           </plugin>
-          <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                    <preparationGoals>clean install</preparationGoals>
-                </configuration>
-            </plugin> -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                  <skipAttachedArtifacts>
-                    <artifact>
-                      <groupId>wso2.sampleHelloWorld</groupId>
-                      <artifactId>helloConfigs</artifactId>
-                      <version>${project.version}</version>
-                      <packaging>pom</packaging>
-                    </artifact>
-                  </skipAttachedArtifacts>
-                </configuration>
-            </plugin>
+          <plugin>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.8.2</version>
+            <configuration>
+              <skipAttachedArtifacts>
+                <artifact>
+                  <groupId>wso2.sampleHelloWorld</groupId>
+                  <artifactId>helloConfigs</artifactId>
+                  <version>${project.version}</version>
+                  <packaging>pom</packaging>
+                </artifact>
+              </skipAttachedArtifacts>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
