--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,21 @@
       <url>http://localhost:8081/nexus/content/repositories/releases/</url>
     </repository>
   </distributionManagement>
-  <build />
+  <build >
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <preparationGoals>clean install</preparationGoals>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+        </plugins>
+  </build>
   <profiles>
     <profile>
       <id>Solution</id>
@@ -38,20 +52,6 @@
               <projectnatures>
                 <projectnature>org.wso2.developerstudio.eclipse.mavenmultimodule.project.nature</projectnature>
               </projectnatures>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-deploy-plugin</artifactId>
-            <version>2.8.2</version>
-            <configuration>
-              <skipAttachedArtifacts>
-                <artifact>
-                  <groupId>wso2.sampleHelloWorld</groupId>
-                  <artifactId>helloConfigs</artifactId>
-                  <version>${project.version}</version>
-                  <packaging>pom</packaging>
-                </artifact>
-              </skipAttachedArtifacts>
             </configuration>
           </plugin>
         </plugins>
