--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </repository>
   </distributionManagement>
   <build>
-        <plugins>
+        <!-- <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
@@ -37,7 +37,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins> -->
   </build>
   <profiles>
     <profile>
