--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
     <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
     <tag>HEAD</tag>
   </scm>
-  <!-- <distributionManagement>
+  <distributionManagement>
     <repository>
       <id>releases</id>
       <name>WSO2 Release Distribution Repository</name>
       <url>http://localhost:8081/nexus/content/repositories/releases/</url>
     </repository>
-  </distributionManagement> -->
+  </distributionManagement>
   <build>
         <!-- <plugins>
             <plugin>
