--- a/pom.xml
+++ b/pom.xml
@@ -25,19 +25,19 @@
     </repository>
   </distributionManagement>
   <build>
-        <!-- <plugins>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <preparationGoals>clean install</preparationGoals>
+                  <tagNameFormat>v@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
             </plugin>
-        </plugins> -->
+        </plugins>
   </build>
   <profiles>
     <profile>
