--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,16 @@
     <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
     <tag>HEAD</tag>
   </scm>
-  <distributionManagement>
+  <!-- <distributionManagement>
     <repository>
       <id>releases</id>
       <name>WSO2 Release Distribution Repository</name>
       <url>http://localhost:8081/nexus/content/repositories/development/</url>
     </repository>
-  </distributionManagement>
+  </distributionManagement> -->
   <build>
         <plugins>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
@@ -36,7 +36,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-            </plugin>
+            </plugin> -->
         </plugins>
   </build>
   <profiles>
