--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>wso2.sampleHelloWorld</groupId>
   <artifactId>hello</artifactId>
-  <version>1.0.287</version>
+  <version>1.0.288-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>hello</name>
   <description>hello</description>
@@ -15,7 +15,7 @@
     <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
     <developerConnection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</developerConnection>
     <url>https://github.com/sajithaliyanage/MI_CICD.git</url>
-    <tag>hello-1.0.287</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <repository>
