--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <module>helloConfigs</module>
     <module>helloCompositeExporter</module>
   </modules>
+  <properties>
+    <project.scm.id>scm-server</project.scm.id>
+  </properties>
   <scm>
     <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
     <developerConnection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</developerConnection>
