--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <module>helloCompositeExporter</module>
   </modules>
   <properties>
-    <project.scm.id>scm-server</project.scm.id>
+    <project.scm.id>my-scm-server</project.scm.id>
   </properties>
   <scm>
     <connection>scm:git:https://github.com/sajithaliyanage/MI_CICD.git</connection>
