--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <repository>
       <id>releases</id>
       <name>WSO2 Release Distribution Repository</name>
-      <url>http://localhost:8081/nexus/content/repositories/development/</url>
+      <url>http://192.168.1.2:8081/nexus/content/repositories/development/</url>
     </repository>
   </distributionManagement>
   <build>
